# AI-Ticket-Resolution-System-Superbase

./: .gitignore  README.md  agents.py  app.py  database.py  email_service.py  launcher.py  pyproject.toml  requirements.txt  supabase_schema.sql  ticket_processor.py
pages/: admin_dashboard.py  user_portal.py
